<resources>
    <string name="app_name">Atividade de PAM</string>
    <string name="menu">Exercícios de fixação</string>
    <string name="btn1">EXERCÍCIO 1</string>
    <string name="bnt2">EXERCÍCIO 3</string>
    <string name="info_dupla">Paulo Ricardo e Rebeka Lima - 2DS - PAM</string>
    <string name="txt_exer3"> Gratificação de Natal</string>
    <string name="edit1_3">Digite os minutos extras</string>
    <string name="edit2_3">Digite os minutos faltados </string>
    <string name="check">Verificar 😄</string>
    <string name="result">Boas festas!</string>
    <string name="extras">Total de horas extras:</string>
    <string name="faltas">Total de horas faltadas:</string>
    <string name="nome">Exercício 1</string>
    <string name="edittextA">Digite o valor de A</string>
    <string name="edittextB">Digite o valor de B</string>
    <string name="btnverificar">Verificar ✅</string>
    <string name="textViewResult">São múltiplos</string>
    <string name="textViewResult2">Não são múltiplos</string>
    <string name="resultado">""</string>
</resources>