<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittextA"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittextB"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnverificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkMultiples"
        android:text="@string/btnverificar" />

</LinearLayout>